2008-03-13  kitone  <kitone@gna.org>

	* src/gui/DialogFileChooser.cc:
	* src/gui/DialogFileChooser.h:
	Rename OpenWaveformUI by DialogOpenWaveform
	and move in DialogFileChosser.

	* src/Makefile.am:
	* src/gui/OpenWaveformUI.cc:
	* src/gui/OpenWaveformUI.h:
	Remove files.

2008-03-13  kitone  <kitone@gna.org>

	* src/Waveform.cc:
	* src/Waveform.h:
	Add static function 'create_from_file'.

2008-03-13  kitone  <kitone@gna.org>

	* src/SubtitleEditorWindow.h:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	Preparing the new multimedia system for the 
	futur player and the waveform editor.

2008-03-13  kitone  <kitone@gna.org>

	* share/glade/subtitleeditor.glade:
	* src/Makefile.am:
	* src/gui/Application.cc:
	* src/gui/Application.h:
	* src/gui/WaveformSystem.cc:
	* src/gui/WaveformSystem.h:
	Remove WaveformSystem.

2008-03-01  kitone  <kitone@gna.org>

	* src/Document.cc:
	Small fix (finish_command)

2008-02-13  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-02-12  kitone  <kitone@gna.org>

	* src/actions/ViewManager.cc:
	Small improvements in View Manager like sensitive.

2008-02-12  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/actions/ViewModes.cc:
	Rename ViewModes.cc by ViewManager.cc

2008-02-12  kitone  <kitone@gna.org>

	* share/glade/Makefile.am:
	* share/glade/dialog-view-manager.glade:
	Add glade file.

	* share/menubar.xml:
	Rename "setting-view-placeholder" by "view-manager-placeholder".

	* src/SubtitleView.cc:
	Rename "columns" by "columns-displayed".

	* src/actions/ViewModes.cc:
	Add "View Manager" interface for settings.
	Rename ViewModesPlugin by ViewManagerPlugin.
	Rename "setting-view" by "view-manager".
	Rename "columns" by "columns-displayed"

	* src/main.cc:
	Remove: "columns", "show-column-*".
	Add: "columns-list", "columns-displayed".

2008-02-11  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	Make scrollable.

2008-02-11  kitone  <kitone@gna.org>

	* share/menubar.xml:
	* src/Makefile.am: